--- a/avatar-on-panel@okitavera.me/stylesheet.css
+++ b/avatar-on-panel@okitavera.me/stylesheet.css
@@ -1,9 +1,9 @@
-.avatar-indicator--wrapper {
+.avatar-wrapper {
   margin-left: 8px;
   margin-right: 4px;
 }
 
-.avatar-indicator {
+.avatar-img {
   border-radius: 360px;
   background-size: contain;
 }
